--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
+    <nav>
+        <Button class="resetButton" id="resetButton">Reset Game</Button>
+    </nav>
     <div class="board" id="board">
         <div class="cell" data-cell ></div>
         <div class="cell" data-cell ></div>
