some little fix and responsiveness, with changing button text on changing the size of window

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <nav>
+        <h2 class="heading">TicTacToe</h2>
         <Button class="resetButton" id="resetButton">Reset Game</Button>
     </nav>
     <div class="board" id="board">
